Clean up dependencies. Add readme.