@@ -81,16 +81,6 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>
-                        --enable-preview
-                    </argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
